added routes and dashboard

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,6 @@
     <script>
       System.import('main.js').catch(function(err){ console.error(err); });
     </script>
-    <my-inventory>Loading...</my-inventory>
+    <my-app>Loading...</my-app>
   </body>
 </html>
